--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -46,7 +46,7 @@
       <button
         type="submit"
         class="w-full py-2.5 rounded-lg bg-gray-900 text-white
-               font-medium hover:bg-gray-800 transition"
+               font-medium hover:bg-gray-800 transition cursor-pointer"
       >
         Login
       </button>
