--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -12,6 +12,7 @@
           <div class="text-white">
             <h1 class="text-xl font-bold leading-tight">Casa de la Cultura</h1>
             <p class="text-xs text-girardota-yellow uppercase tracking-wider">Girardota es Cultura</p>
+            
           </div>
         </a>
       </div>
@@ -110,4 +111,7 @@
       </div>
     }
   </div>
+  <a target="_blank" href="https://linkedin.com/in/juan-a-a-v/" class=" text-sm m-5 text-white/80  hover:text-girardota-yellow transition">
+              Desarrollado por <span class="font-bold">JuanitoCode</span>
+            </a>
 </nav>
