--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -24,6 +24,11 @@
                     {{ programa.inscritos }}
                   </span>
                 </td>
+                <td class="text-center py-4 px-4">
+                  <span class="inline-block bg-green-100 text-green-700 px-3 py-1 rounded-full text-sm font-semibold">
+                    {{ programa.matriculados }}
+                  </span>
+                </td>
                 <td class="text-center py-4 px-4 text-gray-600">
                   {{ programa.cupoTotal }}
                 </td>
